<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Geological Timescale</string>

    <string name="Supereon"></string>
    <string name="Eon">Eonothem</string>
    <string name="Era">Erathem</string>
    <string name="Period">System</string>
    <string name="Epoch">Series</string>
    <string name="Age">Stage</string>

    <string name="menu_true_scale">True to Scale</string>
    <string name="menu_fit_screen">Fit to Screen</string>
    <string name="menu_help">Info/Help</string>
    <string name="menu_search">Search</string>
    <string name="menu_clear_search">Clear Search</string>
    <string name="menu_plus">plus</string>
    <string name="menu_minus">minus</string>

    <string name="root">root</string>
    <string name="n_a">n/a</string>
    <string name="Phanerozoic">Phanerozoic</string>
    <string name="Cenozoic">Cenozoic</string>
    <string name="Quaternary">Quaternary</string>
    <string name="Holocene">Holocene</string>
    <string name="Pleistocene">Pleistocene</string>
    <string name="Late_Pleistocene">Late Pleistocene</string>
    <string name="Middle_Pleistocene">Middle Pleistocene</string>
    <string name="Calabrian">Calabrian</string>
    <string name="Gelasian">Gelasian</string>
    <string name="Neogene">Neogene</string>
    <string name="Pliocene">Pliocene</string>
    <string name="Piacenzian">Piacenzian</string>
    <string name="Zanclean">Zanclean</string>
    <string name="Miocene">Miocene</string>
    <string name="Messinian">Messinian</string>
    <string name="Tortonian">Tortonian</string>
    <string name="Serravallian">Serravallian</string>
    <string name="Langhian">Langhian</string>
    <string name="Burdigalian">Burdigalian</string>
    <string name="Aquitanian">Aquitanian</string>
    <string name="Paleogene">Paleogene</string>
    <string name="Oligocene">Oligocene</string>
    <string name="Chattian">Chattian</string>
    <string name="Rupelian">Rupelian</string>
    <string name="Eocene">Eocene</string>
    <string name="Priabonian">Priabonian</string>
    <string name="Bartonian">Bartonian</string>
    <string name="Lutetian">Lutetian</string>
    <string name="Ypresian">Ypresian</string>
    <string name="Paleocene">Paleocene</string>
    <string name="Thanetian">Thanetian</string>
    <string name="Selandian">Selandian</string>
    <string name="Danian">Danian</string>
    <string name="Mesozoic">Mesozoic</string>
    <string name="Cretaceous">Cretaceous</string>
    <string name="Late_Cretaceous">Late Cretaceous</string>
    <string name="Maastrichtian">Maastrichtian</string>
    <string name="Campanian">Campanian</string>
    <string name="Santonian">Santonian</string>
    <string name="Coniacian">Coniacian</string>
    <string name="Turonian">Turonian</string>
    <string name="Cenomanian">Cenomanian</string>
    <string name="Early_Cretaceous">Early Cretaceous</string>
    <string name="Albian">Albian</string>
    <string name="Aptian">Aptian</string>
    <string name="Barremian">Barremian</string>
    <string name="Hauterivian">Hauterivian</string>
    <string name="Valanginian">Valanginian</string>
    <string name="Berriasian">Berriasian</string>
    <string name="Jurassic">Jurassic</string>
    <string name="Late_Jurassic">Late Jurassic</string>
    <string name="Tithonian">Tithonian</string>
    <string name="Kimmeridgian">Kimmeridgian</string>
    <string name="Oxfordian">Oxfordian</string>
    <string name="Middle_Jurassic">Middle Jurassic</string>
    <string name="Callovian">Callovian</string>
    <string name="Bathonian">Bathonian</string>
    <string name="Bajocian">Bajocian</string>
    <string name="Aalenian">Aalenian</string>
    <string name="Early_Jurassic">Early Jurassic</string>
    <string name="Toarcian">Toarcian</string>
    <string name="Pliensbachian">Pliensbachian</string>
    <string name="Sinemurian">Sinemurian</string>
    <string name="Hettangian">Hettangian</string>
    <string name="Triassic">Triassic</string>
    <string name="Late_Triassic">Late Triassic</string>
    <string name="Rhaetian">Rhaetian</string>
    <string name="Norian">Norian</string>
    <string name="Carnian">Carnian</string>
    <string name="Middle_Triassic">Middle Triassic</string>
    <string name="Ladinian">Ladinian</string>
    <string name="Anisian">Anisian</string>
    <string name="Early_Triassic">Early Triassic</string>
    <string name="Olenekian">Olenekian</string>
    <string name="Induan">Induan</string>
    <string name="Paleozoic">Paleozoic</string>
    <string name="Permian">Permian</string>
    <string name="Lopingian">Lopingian</string>
    <string name="Changhsingian">Changhsingian</string>
    <string name="Wuchiapingian">Wuchiapingian</string>
    <string name="Guadalupian">Guadalupian</string>
    <string name="Capitanian">Capitanian</string>
    <string name="Wordian">Wordian</string>
    <string name="Roadian">Roadian</string>
    <string name="Cisuralian">Cisuralian</string>
    <string name="Kungurian">Kungurian</string>
    <string name="Artinskian">Artinskian</string>
    <string name="Sakmarian">Sakmarian</string>
    <string name="Asselian">Asselian</string>
    <string name="Carboniferous">Carboniferous</string>
    <string name="Pennsylvanian">Pennsylvanian</string>
    <string name="Gzhelian">Gzhelian</string>
    <string name="Kasimovian">Kasimovian</string>
    <string name="Moscovian">Moscovian</string>
    <string name="Bashkirian">Bashkirian</string>
    <string name="Mississippian">Mississippian</string>
    <string name="Serpukhovian">Serpukhovian</string>
    <string name="Visean">Viséan</string>
    <string name="Tournaisian">Tournaisian</string>
    <string name="Devonian">Devonian</string>
    <string name="Late_Devonian">Late Devonian</string>
    <string name="Famennian">Famennian</string>
    <string name="Frasnian">Frasnian</string>
    <string name="Middle_Devonian">Middle Devonian</string>
    <string name="Givetian">Givetian</string>
    <string name="Eifelian">Eifelian</string>
    <string name="Early_Devonian">Early Devonian</string>
    <string name="Emsian">Emsian</string>
    <string name="Pragian">Pragian</string>
    <string name="Lochkovian">Lochkovian</string>
    <string name="Silurian">Silurian</string>
    <string name="Pridoli">Pridoli</string>
    <string name="Ludlow">Ludlow</string>
    <string name="Ludfordian">Ludfordian</string>
    <string name="Gorstian">Gorstian</string>
    <string name="Wenlock">Wenlock</string>
    <string name="Homerian">Homerian</string>
    <string name="Sheinwoodian">Sheinwoodian</string>
    <string name="Llandovery">Llandovery</string>
    <string name="Telychian">Telychian</string>
    <string name="Aeronian">Aeronian</string>
    <string name="Rhuddanian">Rhuddanian</string>
    <string name="Ordovician">Ordovician</string>
    <string name="Late_Ordovician">Late Ordovician</string>
    <string name="Hirnantian">Hirnantian</string>
    <string name="Katian">Katian</string>
    <string name="Sandbian">Sandbian</string>
    <string name="Middle_Ordovician">Middle Ordovician</string>
    <string name="Darriwilian">Darriwilian</string>
    <string name="Dapingian">Dapingian</string>
    <string name="Early_Ordovician">Early Ordovician</string>
    <string name="Floian">Floian</string>
    <string name="Tremadocian">Tremadocian</string>
    <string name="Cambrian">Cambrian</string>
    <string name="Furongian">Furongian</string>
    <string name="Stage_10">Stage 10</string>
    <string name="Jiangshanian">Jiangshanian</string>
    <string name="Paibian">Paibian</string>
    <string name="Series_3">Series 3</string>
    <string name="Guzhangian">Guzhangian</string>
    <string name="Drumian">Drumian</string>
    <string name="Stage_5">Stage 5</string>
    <string name="Series_2">Series 2</string>
    <string name="Stage_4">Stage 4</string>
    <string name="Stage_3">Stage 3</string>
    <string name="Terreneuvian">Terreneuvian</string>
    <string name="Stage_2">Stage 2</string>
    <string name="Fortunian">Fortunian</string>
    <string name="Precambrian">Precambrian</string>
    <string name="Proterozoic">Proterozoic</string>
    <string name="Neoproterozoic">Neoproterozoic</string>
    <string name="Ediacaran">Ediacaran</string>
    <string name="Cryogenian">Cryogenian</string>
    <string name="Tonian">Tonian</string>
    <string name="Mesoproterozoic">Mesoproterozoic</string>
    <string name="Stenian">Stenian</string>
    <string name="Ectasian">Ectasian</string>
    <string name="Calymmian">Calymmian</string>
    <string name="Paleoproterozoic">Paleoproterozoic</string>
    <string name="Statherian">Statherian</string>
    <string name="Orosirian">Orosirian</string>
    <string name="Rhyacian">Rhyacian</string>
    <string name="Siderian">Siderian</string>
    <string name="Archean">Archean</string>
    <string name="Neoarchean">Neoarchean</string>
    <string name="Mesoarchean">Mesoarchean</string>
    <string name="Paleoarchean">Paleoarchean</string>
    <string name="Eoarchean">Eoarchean</string>
    <string name="Hadean">Hadean</string>

    <string name="help_text"><![CDATA[
    <b><u>Geological Timescale</u></b>
    <br/>
    <br/>
    This App shows the geological timescale of the earth&#039;s history.
    The most recent geologic periods are at the top, the most ancient periods
    are at the bottom. The larger units are at the left, the smaller units are
    at the right.
    <br/>
    <br/>
    <br/>
    <b><u>Usage:</u></b>
    <br/>
    <br/>
    <b>Plus:</b> Add a column with smaller units at the right.
    <br/>
    <b>Minus:</b> Remove the column with smallest units.
    <br/>
    <b>Swipe-Left:</b> Move the display towards the smaller units.
    <br/>
    <b>Swipe-Right:</b> Move the display towards the larger units.
    <br/>
    </br>
    <br/>
    <br/>
    <b><u>Credits</u></b>
    <br/>
    <br/>
    All data is based on Wikipedia. See
    <a href="https://en.wikipedia.org/wiki/Geologic_time_scale">https://en.wikipedia.org/wiki/Geologic_time_scale</a>
    <br/>
    <br/>
     ]]></string>
</resources>
